--- a/travis/requirements.txt
+++ b/travis/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/phlax/aio.testing.git#egg=aio.testing
-git+https://github.com/phlax/aio.core.git#egg=aio.core
+aio.testing
+
 
