--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include MANIFEST.in
 include README.rst
 recursive-include aio/config *.rst
-recursive-include aio/config/tests/resources *
+recursive-include aio/config/tests *.rst
